help.css alignment fix for accordion header

--- a/src/routes/help.css
+++ b/src/routes/help.css
@@ -94,6 +94,7 @@
 
 .help-card-header h5 {
   color: #002f4f;
+  margin: 0;
   font-weight: 600;
 }
 
